--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
       "sequelize": "^6.3.5",
       "sequelize-cli": "^6.2.0",
       "socket.io": "^3.0.5",
-      "typeorm": "0.2.30",
       "reflect-metadata": "^0.1.10",
       "mysql": "^2.14.1"
    },
@@ -40,6 +39,7 @@
       "@types/node": "^8.0.29",
       "nodemon": "^2.0.7",
       "ts-node": "3.3.0",
+      "typeorm": "^0.2.30",
       "typescript": "3.3.3333"
    }
 }
