--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,7 +3,7 @@
   "host": "localhost",
   "port": 3306,
   "username": "",
-  "password": "",
+  "password": "[]",
   "database": "test",
   "synchronize": true,
   "logging": false,
