--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
    "description": "",
    "main": "index.ts",
    "scripts": {
-      "start": "ts-node index.ts",
+      "start" : "nodemon --exec ts-node index.ts --watch",
       "test": "echo \"Error: no test specified\" && exit 1"
    },
    "repository": {
@@ -43,3 +43,5 @@
       "typescript": "3.3.3333"
    }
 }
+
+
