--- a/package.json
+++ b/package.json
@@ -18,18 +18,20 @@
    },
    "homepage": "https://github.com/BreezeBM/Knock-Knock-Server#readme",
    "dependencies": {
+      "@types/express-session": "^1.17.3",
       "axios": "^0.21.1",
       "cors": "^2.8.5",
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
+      "express-session": "^1.17.1",
       "jsonwebtoken": "^8.5.1",
+      "mysql": "^2.14.1",
       "mysql2": "^2.2.5",
       "node-schedule": "^1.3.2",
+      "reflect-metadata": "^0.1.10",
       "sequelize": "^6.3.5",
       "sequelize-cli": "^6.2.0",
-      "socket.io": "^3.0.5",
-      "reflect-metadata": "^0.1.10",
-      "mysql": "^2.14.1"
+      "socket.io": "^3.0.5"
    },
    "devDependencies": {
       "@types/cors": "^2.8.9",
