--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,7 +2,7 @@
   "type": "mysql",
   "host": "localhost",
   "port": 3306,
-  "username": "123",
+  "username": "",
   "password": "",
   "database": "test",
   "synchronize": true,
