--- a/package.json
+++ b/package.json
@@ -1,47 +1,53 @@
 {
-   "name": "knock-knock-server",
-   "version": "1.0.0",
-   "description": "",
-   "main": "index.ts",
-   "scripts": {
-      "start": "nodemon --exec ts-node index.ts --watch",
-      "test": "echo \"Error: no test specified\" && exit 1"
-   },
-   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/BreezeBM/Knock-Knock-Server.git"
-   },
-   "author": "",
-   "license": "ISC",
-   "bugs": {
-      "url": "https://github.com/BreezeBM/Knock-Knock-Server/issues"
-   },
-   "homepage": "https://github.com/BreezeBM/Knock-Knock-Server#readme",
-   "dependencies": {
-      "@types/express-session": "^1.17.3",
-      "axios": "^0.21.1",
-      "cors": "^2.8.5",
-      "dotenv": "^8.2.0",
-      "express": "^4.17.1",
-      "express-session": "^1.17.1",
-      "jsonwebtoken": "^8.5.1",
-      "mysql": "^2.14.1",
-      "mysql2": "^2.2.5",
-      "node-schedule": "^1.3.2",
-      "reflect-metadata": "^0.1.10",
-      "sequelize": "^6.3.5",
-      "sequelize-cli": "^6.2.0",
-      "socket.io": "^3.0.5"
-   },
-   "devDependencies": {
-      "@types/cors": "^2.8.9",
-      "@types/dotenv": "^8.2.0",
-      "@types/express": "^4.17.11",
-      "@types/jsonwebtoken": "^8.5.0",
-      "@types/node": "^8.0.29",
-      "nodemon": "^2.0.7",
-      "ts-node": "3.3.0",
-      "typeorm": "^0.2.30",
-      "typescript": "3.3.3333"
-   }
+  "name": "knock-knock-server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.ts",
+  "scripts": {
+    "start": "nodemon --exec ts-node index.ts --watch",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BreezeBM/Knock-Knock-Server.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/BreezeBM/Knock-Knock-Server/issues"
+  },
+  "homepage": "https://github.com/BreezeBM/Knock-Knock-Server#readme",
+  "dependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express-session": "^1.17.3",
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "http": "0.0.1-security",
+    "https": "^1.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.14.1",
+    "mysql2": "^2.2.5",
+    "node-schedule": "^1.3.2",
+    "reflect-metadata": "^0.1.10",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
+    "socket.io": "^3.0.5"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.9",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^8.10.66",
+    "nodemon": "^2.0.7",
+    "ts-node": "3.3.0",
+    "typeorm": "^0.2.30",
+    "typescript": "3.3.3333"
+  }
 }
