--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   "dependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/cookie-parser": "^1.4.2",
-    "@types/express-session": "^1.17.3",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mysql-session": "^2.1.5",
     "express-session": "^1.17.1",
     "http": "0.0.1-security",
     "https": "^1.0.0",
@@ -43,6 +43,7 @@
     "@types/cors": "^2.8.9",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^8.10.66",
     "nodemon": "^2.0.7",
