--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "watch": "tsc --watch index.ts",
     "start": "nodemon --exec ts-node index.ts --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,11 +22,13 @@
     "@types/body-parser": "^1.19.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/node-schedule": "^1.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
     "express": "^4.17.1",
     "express-mysql-session": "^2.1.5",
     "express-session": "^1.17.1",
@@ -39,7 +42,8 @@
     "reflect-metadata": "^0.1.10",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
-    "socket.io": "^3.0.5"
+    "socket.io": "^3.0.5",
+    "tsc-watch": "^4.2.9"
   },
   "devDependencies": {
     "@types/cors": "^2.8.9",
