--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,14 @@
   "compilerOptions": {
     "lib": ["es5", "es6"],
     "target": "ES6",
-    "module": "commonjs",
+    "module": "ES6",
     "moduleResolution": "node",
     "outDir": "./build",
     "emitDecoratorMetadata": true,
     "allowJs":true,
     "experimentalDecorators": true,
     "sourceMap": true,
-    "esModuleInterop": false,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "typeRoots": [
       "./node_modules/@types",
